hphp/hack/test/typecheck/reactive/pure_overridden_class.php.exp
File "pure_overridden_class.php", line 9, characters 19-22:
The method `pure` is not compatible with the overridden method (Typing[4341])
  File "pure_overridden_class.php", line 5, characters 19-22:
  This function is pure.
  File "pure_overridden_class.php", line 9, characters 19-22:
  This function is normal.
